<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#CDDCDA"
        app:cardCornerRadius="20dp"
        android:layout_margin="8dp"
        android:id="@+id/cv">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"

            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fotoFutbolista"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/nombre" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nombreFutbolista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:padding="3dp"
                        android:text="@string/nombre"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/seleccionFutbolista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/seleccion" />

                    <TextView
                        android:id="@+id/clubFutbolista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/club" />

                    <TextView
                        android:id="@+id/edadFutbolista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/edad" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnMasInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="20sp"
                android:background="@drawable/bordes_redondos"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <TextView
            android:id="@+id/infoFutbolista"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/linkFutbolista"
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
